--- a/index.html
+++ b/index.html
@@ -12,23 +12,29 @@
 <body>
     <h1>Tic Tac Toe</h1>
 
-    <div>
-        <div id="1" class="square"></div>
-        <div id="2" class="square"></div>
-        <div id="3" class="square"></div>
+    <div class="stage">
+
+        <div>
+            <div id="1" class="square"></div>
+            <div id="2" class="square"></div>
+            <div id="3" class="square"></div>
+        </div>
+
+        <div>
+            <div id="4" class="square"></div>
+            <div id="5" class="square"></div>
+            <div id="6" class="square"></div>
+        </div>
+
+        <div>
+            <div id="7" class="square"></div>
+            <div id="8" class="square"></div>
+            <div id="9" class="square"></div>
+        </div>
+
     </div>
 
-    <div>
-        <div id="4" class="square"></div>
-        <div id="5" class="square"></div>
-        <div id="6" class="square"></div>
-    </div>
-
-    <div>
-        <div id="7" class="square"></div>
-        <div id="8" class="square"></div>
-        <div id="9" class="square"></div>
-    </div>
+    <button id="reset_btn">RESET</button>
 </body>
 
 </html>
