adição das classes dos jogadores

--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <div class="stage">
 
         <div>
-            <div id="1" class="square"></div>
-            <div id="2" class="square"></div>
+            <div id="1" class="square">
+                <div class="o"></div>
+            </div>
+            <div id="2" class="square">
+                <div class="x"></div>
+            </div>
             <div id="3" class="square"></div>
         </div>
 
