--- a/index.html
+++ b/index.html
@@ -15,30 +15,29 @@
     <div class="stage">
 
         <div>
-            <div id="1" class="square">
-                <div class="o"></div>
-            </div>
-            <div id="2" class="square">
-                <div class="x"></div>
-            </div>
-            <div id="3" class="square"></div>
+            <div id="0" class="square"></div>
+            <div id="1" class="square"></div>
+            <div id="2" class="square"></div>
         </div>
 
         <div>
+            <div id="3" class="square"></div>
             <div id="4" class="square"></div>
             <div id="5" class="square"></div>
-            <div id="6" class="square"></div>
         </div>
 
         <div>
+            <div id="6" class="square"></div>
             <div id="7" class="square"></div>
             <div id="8" class="square"></div>
-            <div id="9" class="square"></div>
         </div>
 
     </div>
 
     <button id="reset_btn">RESET</button>
+
+    <script src="./game.js"></script>
+    <script src="./interface.js"></script>
 </body>
 
 </html>
