Adição das funções de fim de jogo e reset

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <h1>Tic Tac Toe</h1>
 
+    <p id="player_indicator">It's player one's turn (O).</p>
+
     <div class="stage">
 
         <div>
@@ -34,7 +36,7 @@
 
     </div>
 
-    <button id="reset_btn">RESET</button>
+    <button id="reset_btn" onclick="resetGame()">RESET</button>
 
     <script src="./game.js"></script>
     <script src="./interface.js"></script>
